@@ -1,5 +1,10 @@
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-token-1.test: |STRING| and |INVALID|
+	test cases are added.
+
+2007-09-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-token-1.test: New tests are added.
 
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
