@@ -1,5 +1,9 @@
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* Tokenizer.pm: |STRING|-related bugs are fixed.
+
+2007-09-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* Tokenizer.pm: Bug fixes.
 
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
